--- a/probablyNot.html
+++ b/probablyNot.html
@@ -220,7 +220,7 @@
     </div>
 
     <!-- ML5.js Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ml5/0.12.2/ml5.min.js"></script>
+    <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="probablyNot.js"></script>
   </body>
