--- a/index.html
+++ b/index.html
@@ -4,91 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Probably Not - Image Recognition</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: "Arial", sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        color: white;
-      }
-
-      .container {
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(10px);
-        border-radius: 20px;
-        padding: 2rem;
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-        text-align: center;
-        max-width: 800px;
-        width: 90%;
-      }
-
-      h1 {
-        font-size: 2.5rem;
-        margin-bottom: 1rem;
-        background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-      }
-
-      .instructions {
-        font-size: 1.1rem;
-        margin-bottom: 2rem;
-        line-height: 1.6;
-        opacity: 0.9;
-      }
-
-      .main-button {
-        background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
-        border: none;
-        padding: 1rem 2rem;
-        font-size: 1.2rem;
-        color: white;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        text-transform: uppercase;
-        font-weight: bold;
-        letter-spacing: 1px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-        text-decoration: none;
-        display: inline-block;
-      }
-
-      .main-button:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-      }
-
-      @media (max-width: 768px) {
-        .container {
-          padding: 1rem;
-        }
-
-        h1 {
-          font-size: 2rem;
-        }
-
-        .instructions {
-          font-size: 1rem;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <h1>🤖 Probably Not</h1>
+      <h1>Probably Not</h1>
       <div class="instructions">
         <p>
           Welcome to "Probably Not" - the AI that tells you what things probably
@@ -101,9 +21,9 @@
           sometimes being wrong is more interesting than being right!
         </p>
         <br />
-        <p>📸 Take a photo with your camera or upload an image</p>
-        <p>🤖 Let our AI make its best guess</p>
-        <p>😄 Discover what your image is "Probably Not"</p>
+        <p>Take a photo with your camera or upload an image</p>
+        <p>Let our AI make its best guess</p>
+        <p>Discover what your image is "Probably Not"</p>
       </div>
       <a href="probablyNot.html" class="main-button">Start Probably Not</a>
     </div>
